# pavo

./: .babelrc  .babelrc.json  .bandit  .dockerignore  .eslintrc.json  .gitignore  .pado_visualize.toml  .parcelrc  .pavo.toml  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  environment.devenv.yml  environment.yml  mypy.ini  package-lock.json  package.json  postcss.config.js  pyproject.toml  setup.cfg  setup.py  webpack.config.js
.github/workflows/: milestones.yaml  run_pytests.yaml
ci/: parcel_namer_custom.patch
dev/: DEVELOPMENT.md  pado_visualize.conf  pavo.conf
docs/: DEVELOPMENT.md
pado_visualize/: __init__.py  __main__.py  _auth.py  app.py  cli.py  config.py  dash_pado_components.py  data.py  dataloader.py  extensions.py  index.py  oauth.py  utils.py  worker.py  wsgi.py
pado_visualize/api/: api.py  utils.py
pado_visualize/assets/: 40-openseadragon.js  70-seadragon-multi.js  71-text-item.js  72-seadragon-multi-photo.js  98-pado-seadragon.js  99-pado-visualize.js  css-42-openseadragon-annotorious.min.css  css-43-annotations-classes.css  css-90-dash-bootstrap-compat.css  css-99-pado.css  dash_bootstrap_compat.css  pado.css
pado_visualize/components/: __init__.py
pado_visualize/dashs/: app_landing.py  app_metadata.py  app_overview.py  app_project.py  app_seadragon.py  app_seadragon_multi.py  app_slides.py  app_table.py
pado_visualize/data/: caches.py  dataset.py  prediction_results.py  slides.py  webdataset.py
pado_visualize/home/: tasks.py  views.py
pado_visualize/metadata/: utils.py  views.py
pado_visualize/pado/: __init__.py
pado_visualize/pado/ext/visualize/: __init__.py  __main__.py  _version.py  app_landing.py  app_metadata.py  app_overview.py  app_project.py  dataloader.py  index.py  utils.py
pado_visualize/pado/ext/visualize/assets/: 99-pado-visualize.js  custom-script.js  header.css  pado.css  typography.css
pado_visualize/pado/ext/visualize/dashs/: app_overview.py
pado_visualize/routes/: __init__.py  _route_utils.py  index.py  qpzip.py  seadragon.py  thumbnail.py  w3c.py  wsickr.py
pado_visualize/slides/: cache.py  tasks.py  utils.py  views.py
pado_visualize/static/css/: slides-openseadragon.css  slides-thumbnails.css
pado_visualize/static/temporary/annotorious-openseadragon-2.5.7/: annotorious-openseadragon.umd.js.map  annotorious.min.css  openseadragon-annotorious.min.js  recogito-polyfills.js
pado_visualize/static_src/: _base.js  base.js  home.js  metadata.js  slides.js  slides_deckgl.js  slides_deckgl.jsx  slides_openseadragon.js  slides_viewer.js
pado_visualize/static_src/css/: base.scss  home.scss  metadata.scss  slides.scss  slides_deckgl.scss  slides_openseadragon.scss
pado_visualize/static_src/js/: common.js
pado_visualize/templates/: header.html  layout.html  sidebar.html
pado_visualize/templates/base/: base.html  sidebar.html
pado_visualize/templates/home/: index.html
pado_visualize/templates/metadata/: index.html
pado_visualize/templates/slides/: index.html  openseadragon_viewer.html  thumbnails.html  viewer_deckgl.html  viewer_openseadragon.html
pado_visualize/wsickr/: types.py
pavo/: .pavo.default.toml  __init__.py  __main__.py  _types.py  app.py  cli.py  config.py  data.py  extensions.py  oauth.py  utils.py  worker.py
pavo/api/: api.py  utils.py
pavo/home/: tasks.py  views.py
pavo/metadata/: utils.py  views.py
pavo/slides/: cache.py  tasks.py  utils.py  views.py
pavo/static_src/: _base.js  metadata.js  slides_deckgl.jsx  slides_openseadragon.js
pavo/static_src/css/: _colors.scss  base.scss  home.scss  metadata.scss  slides_openseadragon.scss
pavo/templates/: layout.html  sidebar.html
pavo/templates/metadata/: index.html
pavo/templates/slides/: thumbnails.html  viewer_openseadragon.html
pavo/tests/: test_cli.py
scripts/: make_twoggates_dataset.py
