[metadata]
name = pavo
author = Andreas Poehlmann
author_email = andreas.poehlmann@bayer.com
url = https://github.com/bayer-group/pavo
classifiers =
    Development Status :: 3 - Alpha

[options]
packages =
    find:
python_requires = >=3.8
install_requires =
    Flask-Caching>=1.8.0
    celery
    click
    diskcache
    dynaconf
    filelock
    flask>=2
    flower
    fsspec
    geojson-pydantic
    imagecodecs
    numpy
    orjson
    pado
    pandas
    pillow
    platformdirs
    pyarrow
    pydantic
    pyopenssl
    rasterio
    redis
    s3fs
    shapely
    tiffslide
    typer
    tqdm
build_requires =
    setuptools_scm

[options.extras_require]
dev =
    pre-commit
    black
    pytest>=6
    pytest-cov
    mypy

[options.entry_points]
console_scripts =
    pavo = pavo.__main__:cli
