[metadata]
name = pavo
author = Andreas Poehlmann
author_email = andreas.poehlmann@bayer.com
url = https://github.com/bayer-group/pavo
download_url = https://github.com/bayer-group/pavo
license = BSD
license_file = LICENSE
description = PAthological Visualisation Obsession
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
packages =
    find:
python_requires = >=3.8
install_requires =
    celery
    click
    dynaconf
    filelock
    flask-caching>=1.8.0
    flask>=2
    fsspec
    geopandas
    importlib_resources
    itsdangerous
    orjson
    pado>=0.12
    pandas
    pillow
    redis
    tiffslide>=2
    tqdm
    typer
    typing-extensions
    werkzeug
build_requires =
    setuptools_scm

[options.extras_require]
dev =
    pre-commit
    black
    pytest>=6
    pytest-cov
    mypy

[options.entry_points]
console_scripts =
    pavo = pavo.__main__:cli
